[project]
name = "yt-suggestion"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = "ekolivero@pm.me"},
]
dependencies = ["browser-use>=0.1.41", "patchright>=1.51.3", "lmnr[all]>=0.5.2"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
